--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "lucide-react": "^0.446.0",
     "mongodb": "^6.8.0",
     "next": "13.5.1",
+    "next-intl": "^3.26.5",
     "next-themes": "^0.3.0",
     "payload": "^2.28.0",
     "postcss": "8.4.30",
